Hero section + background animation is done and mobile friendly

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+
 * {
-    font-family: 'Helvetica Neue', sans-serif;
-    box-sizing: border-box;
+    font-family: 'Space Grotesk', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -11,9 +12,7 @@ html {
 }
 
 body {
-    font-size: 1.6rem;
     background: #0F1624;
-    color: hsl(204,23.8%,95.9%);
     cursor: default;
 }
 
@@ -23,4 +22,12 @@ a {
 
 li{
     list-style: none;
+}
+
+button {
+    border: none;
+    border-radius: 50px;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
