--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,5 +1,5 @@
 .mainWrapper {
-    margin: 0 100px;
+    margin: 0 200px;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: 1fr;
@@ -15,6 +15,7 @@
     width: 4rem;
     height: 4rem;
     fill: white;
+    padding-top: 3px;
 }
 
 .linksWrapper {
@@ -49,14 +50,20 @@
     transition: 0.3s ease;
     color: white;
     border-radius: 100%;
-    padding: 8px;
-    margin-left: 50px;
+    padding: 8px 8px 4px 8px;
+    margin-left: 30px;
 }
 
 .socials:hover {
     background-color: #212d45;
     transform: scale(1.2);
     cursor: pointer;
+}
+
+@media screen and (max-width: 1400px) {
+    .mainWrapper {
+        margin: 0 50px;
+    }
 }
 
 @media screen and (max-width: 1200px) {
@@ -66,15 +73,9 @@
     .linksWrapper {
         grid-area: 1 / 2 / 2 / 5;
     }
-    .socials {
-        margin-left: 33px;
-    }
 }
 
 @media screen and (max-width: 900px) {
-    .mainWrapper {
-        margin: 0 50px;
-    }
     .socials {
         margin-left: 25px;
     }
@@ -94,21 +95,12 @@
         grid-row-gap: 0.5rem;
     }
 
-    .logoWrapper {
-        grid-area: 1 / 1 / 2 / 3;
-    }
-
     .linksWrapper {
         grid-area: 2 / 1 / 3 / 7;
     }
 
     .socialsWrapper {
-        align-items: center;
         grid-area: 1 / 5 / 2 / 7;
-    }
-
-    .a {
-        padding: 0.5rem;
     }
 }
 
