--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -1,6 +1,7 @@
 .mainWrapper {
     width: 125%;
     z-index: 10;
+    padding-top: 45px;
 }
 
 .buttonWrapper {
@@ -13,18 +14,24 @@
     color: white;
     width: 100%;
     height: 100%;
-    background: linear-gradient(270deg, #00ccff 0%, #C04CFD 100%);
+    background: linear-gradient(270deg, #00b8e8, #b347ec);
     transition: .4s ease;
     font-size: 22px;
     font-weight: 600;
 }
 
 .button:hover {
-    background: linear-gradient(270deg, #00ddff 0%, #c05cff 100%);
+    background: linear-gradient(270deg, #00CCFF 0%, #C04CFD);
 }
 
 .button:active {
-    opacity: .8;
+    opacity: .5;
+}
+
+@media screen and (min-width: 640px) {
+    .hideOnBigScreen {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 640px) {
@@ -36,6 +43,9 @@
     }
     .buttonWrapper {
         margin: 0 auto;
+    }
+    .hideOnSmallScreen {
+        display: none;
     }
 }
 
