--- a/src/styles/Award.module.css
+++ b/src/styles/Award.module.css
@@ -43,6 +43,7 @@
     font-size: 3rem;
     margin-top: 10px;
     font-weight: bold;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 .prizeName {
