--- a/src/styles/Section.module.css
+++ b/src/styles/Section.module.css
@@ -30,13 +30,13 @@
     -webkit-text-fill-color: transparent;
     margin-bottom: 10px;
     padding: 0;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 .subtitle {
     font-size: 25px;
     font-weight: normal;
     color: #C04CFD;
-    font-family: "Helvetica Neue", sans-serif;
     margin-bottom: 20px;
 }
 
