Finish projects section, added filtering. Rearrange page, changed colors and fonts. Added favicon and logo for home

--- a/src/styles/BackgroundAnimation.module.css
+++ b/src/styles/BackgroundAnimation.module.css
@@ -33,7 +33,7 @@
     content: '';
     position: absolute;
     inset: calc(2px - 0.22px * var(--nth-child));
-    background: #0F1624;
+    background: #0E131F;
     border-radius: 50%;
 }
 .circle:nth-child(even):before {
