--- a/src/styles/Award.module.css
+++ b/src/styles/Award.module.css
@@ -5,7 +5,7 @@
     width: 250px;
     padding: 20px 20px 30px;
     margin: 50px 20px;
-    background: #0F1624;
+    background: #0E131F;
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
