--- a/src/styles/Project.module.css
+++ b/src/styles/Project.module.css
@@ -6,21 +6,14 @@
     padding: 13px 14px;
     margin: 0 auto;
     transition: .5s;
-    background: #0F1624;
+    background: #0E131F;
     z-index: 0;
+    min-height: 698px;
 }
 
 @media screen and (min-width: 965px) {
-    .wrapper:nth-child(odd) {
-        transform-origin: left;
-    }
-
-    .wrapper:nth-child(even) {
-        transform-origin: right;
-    }
-
     .wrapper:hover {
-        transform: scale(1.2);
+        transform: scale(1.05);
         z-index: 100;
     }
 }
@@ -29,6 +22,7 @@
     object-fit: cover;
     overflow: hidden;
     border-radius: 20px;
+    height: 1000px;
 }
 
 .titleWrapper {
