--- a/src/styles/OpenAnimation.module.css
+++ b/src/styles/OpenAnimation.module.css
@@ -59,6 +59,7 @@
 .divider {
     transform: translateX(-200%);
     animation: moveRight .7s .5s ease-out forwards;
+    grid-area: 2 / 1 / 3 / 3;
 }
 
 .navBar {
