--- a/src/styles/Section.module.css
+++ b/src/styles/Section.module.css
@@ -3,8 +3,9 @@
     padding: 0 48px;
     flex-direction: row;
     max-width: 1040px;
-    width: 100%;
+    /*width: 100%;*/
     position: relative;
+    /*overflow: hidden;*/
 }
 
 .overrideWrapper {
