--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -8,7 +8,7 @@
 }
 
 .name {
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: 1 / 1 / 2 / 3;
     display: flex;
     vertical-align: middle;
     font-size: 2.5rem;
@@ -66,18 +66,21 @@
     }
 }
 
-@media screen and (max-width: 1200px) {
-    .mainWrapper {
-        margin: 0 50px;
+@media screen and (max-width: 1100px) {
+    .socials {
+        margin-left: 25px;
     }
     .linksWrapper {
-        grid-area: 1 / 2 / 2 / 5;
+        grid-area: 1 / 3 / 2 / 5;
     }
 }
 
 @media screen and (max-width: 900px) {
     .socials {
         margin-left: 25px;
+    }
+    .linksWrapper {
+        grid-area: 1 / 3 / 2 / 6;
     }
 }
 
@@ -87,18 +90,19 @@
     }
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 670px) {
     .mainWrapper {
         margin: 0 20px;
         grid-template-rows: repeat(2, 60px);
         grid-column-gap: 0.5rem;
         grid-row-gap: 0.5rem;
     }
-
+    .name {
+        grid-area: 1 / 1 / 2 / 4;
+    }
     .linksWrapper {
         grid-area: 2 / 1 / 3 / 7;
     }
-
     .socialsWrapper {
         grid-area: 1 / 5 / 2 / 7;
     }
